--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-serializer-vue-tjw",
+  "name": "@plntr/jest-serializer-vue-tjw",
   "description": "A superb jest serializer for Vue snapshots",
   "version": "3.19.0",
   "main": "index.js",
